# recognize_rong

./: CMakeLists.txt  face_alignment.cpp  generate_images.cpp  move_images.py  vgg_facerecognition.ipynb
